--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -53,14 +53,12 @@
 }
 
 .app__header-badge {
-  justify-content: center;  
+  justify-content: center;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
   flex-direction: column;
-  height:100%;
-  
-
+  height: 100%;
 
   .badge-cmp,
   .tag-cmp {
@@ -69,15 +67,17 @@
     border-radius: 15px;
     flex-direction: row;
     width: auto;
-    margin-top:40%;
-    position:relative;
-    
-    
-
+    margin-top: 40%;
+    position: relative;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+
+    @media screen and (max-width: 1200px) {
+      padding: 4rem 4rem;
+      
+    }
   }
 
-  .badge-cmp:before{
+  .badge-cmp:before {
     content: "";
     width: 0px;
     height: 0px;
@@ -86,19 +86,15 @@
     border-right: 10px solid transparent;
     border-top: 10px solid white;
     border-bottom: 10px solid transparent;
-    left:6px;
+    left: 6px;
     bottom: -14px;
     border-radius: 6px;
-
   }
-
-
 
   .tag-cmp {
     flex-direction: column;
     margin-bottom: 100px;
-    height:20%;
-  
+    height: 20%;
 
     p {
       width: 100%;
@@ -199,7 +195,7 @@
   justify-content: flex-end;
   align-items: flex-end;
   position: relative;
-  flex-direction:column;
+  flex-direction: column;
 
   img {
     width: 100%;
