--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -5,6 +5,25 @@
   display:flex;
 }
 
+.p-text-responsive {
+
+
+    @media screen and (max-width: 1200px){
+     width:300px !important;
+     
+  }
+  
+
+}
+
+.img-responsive {
+  @media screen and (max-width: 1200px){
+   padding:0px !important;
+    
+ }
+
+}
+
 
 
 .app__full-banner-item {
