--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -3,17 +3,11 @@
   flex-direction: column;
   flex: 1;
   display: flex;
-  margin-top:300px;
+  margin-top: 300px;
 }
 
-.app__full-banner{
-  margin-top:100px;
-}
-
-.p-text-responsive {
-  @media screen and (max-width: 1200px) {
-    width: 300px !important;
-  }
+.app__full-banner {
+  margin-top: 100px;
 }
 
 .img-responsive {
@@ -42,16 +36,11 @@
       height: auto;
       border-radius: 10px;
       object-fit: cover;
-
-      @media screen and (max-width: 1200px) {
-        min-width: 300px;
-      }
     }
   }
 
   .app__full-banner-text {
-    padding: 5% 5% 1% 1%;
-    width: 40%;
+    padding: 2rem 0rem;
 
     .head-text {
       color: var(--black-color);
@@ -60,7 +49,7 @@
     .p-text {
       background-color: white;
       pointer-events: none;
-      padding: 10%;
+      padding: 2rem 1rem;
       border-radius: 10px;
     }
 
