--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -44,10 +44,11 @@
   align-items: center;
   height: 100%;
 
-  margin: 0 2rem;
+  margin: 0rem 2rem;
 
   @media screen and (max-width: 1200px) {
     width: 100%;
+    margin: 4rem 2rem;
   }
 }
 
