--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -22,6 +22,7 @@
   margin: auto;
   display: flex;
   margin-bottom: 8rem;
+  justify-content: space-between;
 
   @media screen and (max-width: 1200px) {
     flex-direction: column;
@@ -29,7 +30,11 @@
 
   .app__full-banner-image {
     padding: 1rem;
-    width: 60%;
+    width: 50%;
+
+    @media screen and (max-width: 1200px) {
+      width: 100%;
+    }
 
     img {
       width: 100%;
@@ -41,6 +46,10 @@
 
   .app__full-banner-text {
     padding: 2rem 0rem;
+    width: 40%;
+    @media screen and (max-width: 1200px) {
+      width: 100%;
+    }
 
     .head-text {
       color: var(--black-color);
