--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -12,8 +12,9 @@
   flex-wrap: wrap;
 }
 
-.app__footer-card-mobile {
-  width: 100%;
+.app__footer-card {
+
+  width: 400px;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -27,6 +28,10 @@
   align-items: center;
   overflow: auto;
 
+  @media sceen and (max-width: 1200px){
+    width:100%;
+  }
+
   img {
     width: 50px;
     height: 50px;
@@ -37,31 +42,18 @@
     margin: 2rem;
     justify-content: space-evenly;
   }
+
 }
 
+
+
+  
+
+
 .app__footer-card-email {
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  margin: 2rem;
-  border: radius 0%;
   background-color: #ffc9d0;
-  opacity: 0.7;
-  border-radius: 10px;
-  padding: 10px;
-  flex-direction: row;
-  align-items: center;
-  overflow: auto;
+}
 
-  img {
-    width: 50px;
-    height: 50px;
-  }
-
-  a {
-    color: var(--black-color);
-    margin: 2rem;
-    justify-content: space-evenly;
-  }
+.app__footer-card-mobile {
+  background-color: #d0e2fe;
 }
