--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -23,6 +23,7 @@
   display: flex;
   margin-bottom: 8rem;
   justify-content: space-between;
+  height:90vh;
 
   @media screen and (max-width: 1200px) {
     flex-direction: column;
